# ChangeLog for net-libs/libtorrent
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.98 2007/09/08 14:36:56 drizzt Exp $

*libtorrent-0.11.8 (08 Sep 2007)

  08 Sep 2007; Timothy Redaelli <drizzt@gentoo.org>
  +libtorrent-0.11.8.ebuild:
  Version bump wrt bug #182816.

  24 May 2007; Timothy Redaelli <drizzt@gentoo.org>
  libtorrent-0.11.4.ebuild:
  append-flags -fno-strict-aliasing wrt bug #179554

  05 Apr 2007; Timothy Redaelli <drizzt@gentoo.org>
  libtorrent-0.11.2.ebuild:
  Stable on ppc wrt bug #172469
  Thanks to Nathan Smith for testing.

*libtorrent-0.11.4 (04 Apr 2007)

  04 Apr 2007; Timothy Redaelli <drizzt@gentoo.org>
  +libtorrent-0.11.4.ebuild:
  Version bump (thx to Flameeyes for reporting on irc)

  29 Mar 2007; Markus Rothe <corsair@gentoo.org> libtorrent-0.11.2.ebuild:
  Stable on ppc64; bug #172469

  29 Mar 2007; Daniel Gryniewicz <dang@gentoo.org> libtorrent-0.11.2.ebuild:
  Marked stable on amd64 for bug #172469

  28 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  libtorrent-0.11.2.ebuild:
  stable x86, bug 172469

*libtorrent-0.11.3 (27 Mar 2007)

  27 Mar 2007; Timothy Redaelli <drizzt@gentoo.org>
  +libtorrent-0.11.3.ebuild:
  Version bump

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove flameeyes from metadata.xml due to retirement.

  23 Feb 2007; Timothy Redaelli <drizzt@gentoo.org>
  -libtorrent-0.10.4.ebuild:
  Remove unused version.

  03 Feb 2007; nixnut <nixnut@gentoo.org> libtorrent-0.11.1.ebuild:
  Stable on ppc wrt bug 164235

  01 Feb 2007; Timothy Redaelli <drizzt@gentoo.org>
  libtorrent-0.11.1.ebuild:
  Stable on amd64 wrt bug #164235

  31 Jan 2007; Markus Rothe <corsair@gentoo.org> libtorrent-0.11.1.ebuild:
  Stable on ppc64; bug #164235

  28 Jan 2007; Raúl Porcel <armin76@gentoo.org> libtorrent-0.11.1.ebuild:
  x86 stable wrt bug 164235
