@@ -1,0 +1,3 @@
+MD5 8974dc9499b382a09fb952cabcfef9a0 libtorrent-0.11.9.tar.gz 545210
+RMD160 fb8de66d65791dab67c195356a98de7cf653d3c9 libtorrent-0.11.9.tar.gz 545210
+SHA256 71f09218a7784b21ab53cdfcd8fa122da60352e5ca117fda7cd8d2763f908a08 libtorrent-0.11.9.tar.gz 545210
