@@ -1,6 +1,16 @@
 # ChangeLog for net-libs/libtorrent
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.98 2007/09/08 14:36:56 drizzt Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.99 2007/10/25 19:22:20 drizzt Exp $
+
+  25 Oct 2007; Timothy Redaelli <drizzt@gentoo.org>
+  +libtorrent-0.11.9.ebuild:
+  Version bump, thanks to Flameeyes for poking me.
+
+*libtorrent-0.11.9 (25 Oct 2007)
+
+  25 Oct 2007; Timothy Redaelli <drizzt@gentoo.org>
+  +libtorrent-0.11.9.ebuild:
+  Version bump, thanks to Flameeyes for poking me.
 
 *libtorrent-0.11.8 (08 Sep 2007)
 
